objects/vlocity_cmt__Element__c.object
<CustomObject>
    <description>Vlocity OmniScript Elements are the components which make up an OmniScript.</description>
    <fields>
        <fullName>vlocity_cmt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InternalNotes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Level__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OmniScriptId__c</fullName>
        <label>OmniScript</label>
        <referenceTo>vlocity_cmt__OmniScript__c</referenceTo>
        <relationshipName>Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OmniScriptVersion__c</fullName>
        <formula>vlocity_cmt__OmniScriptId__r.vlocity_cmt__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Element</label>
        <referenceTo>vlocity_cmt__Element__c</referenceTo>
        <relationshipName>Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentElementName__c</fullName>
        <formula>vlocity_cmt__ParentElementId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentElementType__c</fullName>
        <formula>TEXT(vlocity_cmt__ParentElementId__r.vlocity_cmt__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Element Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertySet__c</fullName>
        <label>Property Set</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReusableOmniScript__c</fullName>
        <formula>vlocity_cmt__OmniScriptId__r.vlocity_cmt__IsReusable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reusable OmniScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SearchKey__c</fullName>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Search Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Calculation Action</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Extract Action</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Post Action</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time (Local)</fullName>
                </value>
                <value>
                    <fullName>Disclosure</fullName>
                </value>
                <value>
                    <fullName>DocuSign Envelope Action</fullName>
                </value>
                <value>
                    <fullName>Done Action</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Filter Block</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Geolocation</fullName>
                </value>
                <value>
                    <fullName>Headline</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Input Block</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Multi-select</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Password</fullName>
                </value>
                <value>
                    <fullName>PDF Action</fullName>
                </value>
                <value>
                    <fullName>Post to Object Action</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity OmniScript Element</label>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>